--- a/MainU.fmx
+++ b/MainU.fmx
@@ -12,7 +12,7 @@ object Form2: TForm2
   Touch.GestureManager = GestureManager1
   Left = 660
   Top = 270
-  DesignerMasterStyle = 0
+  DesignerMasterStyle = 3
   object TabControl1: TTabControl
     Align = Client
     Size.Width = 730.000000000000000000
@@ -32,7 +32,7 @@ object Form2: TForm2
         item
         end>
       IsSelected = True
-      Size.Width = 364.000000000000000000
+      Size.Width = 365.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = ''
@@ -54,17 +54,18 @@ object Form2: TForm2
           Size.Width = 730.000000000000000000
           Size.Height = 70.000000000000000000
           Size.PlatformDefault = False
-          Text = 'Continuous (or Interval) Data'
+          Text = 'Continuous or Categorical Data?'
           TextSettings.Font.StyleExt = {00070000000000000004000000}
           TabOrder = 0
           object btnContinuousYes: TSpeedButton
             StaysPressed = True
             Align = Left
             GroupName = 'Continuous'
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
-            Text = 'Yes'
+            Text = 'Continuous'
             OnClick = btnContinuousYesClick
           end
           object btnContinuousNo: TSpeedButton
@@ -74,7 +75,7 @@ object Form2: TForm2
             Size.Width = 112.000000000000000000
             Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
-            Text = 'No'
+            Text = 'Categorical'
             OnClick = btnContinuousNoClick
           end
           object btnContinuousDontKnow: TSpeedButton
@@ -83,8 +84,9 @@ object Form2: TForm2
             GroupName = 'Continuous'
             IsPressed = True
             Position.X = 618.000000000000000000
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Don'#39't Know'
             OnClick = btnContinuousDontKnowClick
@@ -97,15 +99,16 @@ object Form2: TForm2
           Size.Width = 730.000000000000000000
           Size.Height = 70.000000000000000000
           Size.PlatformDefault = False
-          Text = 'Independent or Dependent Samples'
+          Text = 'Independent or Dependent Samples?'
           TextSettings.Font.StyleExt = {00070000000000000004000000}
           TabOrder = 1
           object btnIndependent: TSpeedButton
             StaysPressed = True
             Align = Left
             GroupName = 'Independent'
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Yes'
             OnClick = btnIndependentClick
@@ -126,8 +129,9 @@ object Form2: TForm2
             GroupName = 'Independent'
             IsPressed = True
             Position.X = 618.000000000000000000
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Don'#39't Know'
             OnClick = btnIndependentDontKnowClick
@@ -140,15 +144,16 @@ object Form2: TForm2
           Size.Width = 730.000000000000000000
           Size.Height = 70.000000000000000000
           Size.PlatformDefault = False
-          Text = '2-samples or >2-samples'
+          Text = '2-samples or >2-samples?'
           TextSettings.Font.StyleExt = {00070000000000000004000000}
           TabOrder = 2
           object btn2SamplesYes: TSpeedButton
             StaysPressed = True
             Align = Left
             GroupName = 'TwoSamples'
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = '2 Samples'
             OnClick = btn3SamplesNoClick
@@ -169,8 +174,9 @@ object Form2: TForm2
             GroupName = 'TwoSamples'
             IsPressed = True
             Position.X = 618.000000000000000000
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Don'#39't Know'
             OnClick = btn3SamplesDontKnowClick
@@ -183,15 +189,16 @@ object Form2: TForm2
           Size.Width = 730.000000000000000000
           Size.Height = 70.000000000000000000
           Size.PlatformDefault = False
-          Text = 'Parametric Data'
+          Text = 'Parametric Data?'
           TextSettings.Font.StyleExt = {00070000000000000004000000}
           TabOrder = 3
           object btnParametricYes: TSpeedButton
             StaysPressed = True
             Align = Left
             GroupName = 'Parametric'
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Yes'
             OnClick = btnParametricYesClick
@@ -212,8 +219,9 @@ object Form2: TForm2
             GroupName = 'Parametric'
             IsPressed = True
             Position.X = 618.000000000000000000
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Don'#39't Know'
             OnClick = btnParametricDontKnowClick
@@ -226,15 +234,16 @@ object Form2: TForm2
           Size.Width = 730.000000000000000000
           Size.Height = 70.000000000000000000
           Size.PlatformDefault = False
-          Text = 'Covariates'
+          Text = 'Controlling for Covariates?'
           TextSettings.Font.StyleExt = {00070000000000000004000000}
           TabOrder = 4
           object btnCovariatesYes: TSpeedButton
             StaysPressed = True
             Align = Left
             GroupName = 'Covariates'
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Yes'
             OnClick = btnCovariatesYesClick
@@ -255,8 +264,9 @@ object Form2: TForm2
             GroupName = 'Covariates'
             IsPressed = True
             Position.X = 618.000000000000000000
+            Position.Y = 11.000000000000000000
             Size.Width = 112.000000000000000000
-            Size.Height = 70.000000000000000000
+            Size.Height = 48.000000000000000000
             Size.PlatformDefault = False
             Text = 'Don'#39't Know'
             OnClick = btnCovariatesDontKnowClick
@@ -281,7 +291,7 @@ object Form2: TForm2
         item
         end>
       IsSelected = False
-      Size.Width = 364.000000000000000000
+      Size.Width = 365.000000000000000000
       Size.Height = 49.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = ''
